--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "react-responsive-accordion",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dantrain.github.io/react-responsive-accordion",
   "devDependencies": {
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "latest",
     "eslint-plugin-import": "^2.1.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
+    "gh-pages": "^0.12.0",
     "react-scripts": "0.8.4"
   },
   "dependencies": {
@@ -22,6 +24,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
